# self-healing-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: eval_ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/: golden_dataset.json
data/raw/: langgraph_intro.txt  qdrant_and_embeddings.txt  rag_overview.txt  ragas_evaluation.txt  retrieval_methods.txt  self_healing_rag.txt
notebooks/: 01_exploration.ipynb
src/: config.py
src/api/: main.py  schemas.py
src/evaluation/: ragas_eval.py  run_eval.py  threshold.py
src/graph/: edges.py  graph.py  nodes.py  prompts.py  state.py
src/ingestion/: embedder.py  indexer.py  loader.py
src/retrieval/: reranker.py  retriever.py
tests/: conftest.py  test_api.py  test_config.py  test_edges.py  test_graph.py  test_loader.py  test_nodes.py  test_ragas_eval.py  test_reranker.py  test_retriever.py  test_threshold.py
