[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-healing-rag"
version = "1.0.0"
description = "A self-correcting, cyclic RAG pipeline (LangGraph + Qdrant + Cohere Rerank + RAGAS) with CI/CD quality gates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Muhammad Fahad" }]
keywords = ["rag", "langgraph", "qdrant", "ragas", "llm", "retrieval", "hallucination"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "cohere>=5.5.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.7.0",
    "ragas>=0.1.10",
    "datasets>=2.19.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "streamlit>=1.35.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/fahadcs321/self-healing-rag"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
